# rustier

./: Cargo.toml  README.md
src/: event_handler.rs  lib.rs  terminal.rs
src/components/: app_frame.rs  mod.rs  panel.rs
src/interface/: canvas.rs  cell.rs  coordinate.rs  event_handler.rs  mod.rs
src/interface/tools/: line.rs  mod.rs  rectangle.rs  text.rs
src/terminal/: event_handler.rs  mod.rs
